web-infras/parser/tests/fixtures/babel/es2022/top-level-await-module/inside-class-property/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (2,7)
2|  p = await 0;
 |     ^
[SyntaxError]: Missing semicolon or line terminator. (2,13)
2|  p = await 0;
 |           ^
